// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sending Domain Update reducer update domain 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": true,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "updateLoading": false,
}
`;

exports[`Sending Domain Update reducer update domain fail 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "updateError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "updateLoading": false,
}
`;

exports[`Sending Domain Update reducer update pending 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "updateError": null,
  "updateLoading": true,
}
`;

exports[`Sending Domain reducer verify cname 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": "valid",
      "ownership_verified": 1,
    },
  },
  "verifyCnameLoading": false,
}
`;

exports[`Sending Domain reducer verify cname fail 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyCnameError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "verifyCnameLoading": false,
}
`;

exports[`Sending Domain reducer verify cname pending 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyCnameError": null,
  "verifyCnameLoading": true,
}
`;

exports[`Sending Domain reducer verify dkim 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "dkim_status": "valid",
      "ownership_verified": 1,
    },
  },
  "verifyDkimLoading": false,
}
`;

exports[`Sending Domain reducer verify dkim fail 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyDkimError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "verifyDkimLoading": false,
}
`;

exports[`Sending Domain reducer verify dkim pending 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyDkimError": null,
  "verifyDkimLoading": true,
}
`;
